--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ body {
 
 .title {
     font-size: 36px;
+    font-weight: 300;
     line-height: 1.4444;
     letter-spacing: 0.05em;
     text-transform: uppercase;
@@ -73,6 +74,7 @@ body {
 
 .subtitle {
     font-size: 16px;
+    font-weight: 300;
     line-height: 1.375;
     letter-spacing: 0.05em;
     text-transform: uppercase;
@@ -92,6 +94,7 @@ body {
 
 .site-title {
     font-size: 36px;
+    font-weight: 300;
     line-height: 1.4444;
     letter-spacing: 0.05em;
     text-transform: uppercase;
@@ -120,6 +123,7 @@ body {
 
 .menu-title {
     font-size: 30px;
+    font-weight: 400;
     line-height: 1.2333;
     text-align: center;
     text-transform: uppercase;
@@ -129,6 +133,7 @@ body {
 
 .menu-subtitle {
     line-height: 1.3571;
+    font-weight: 400;
     text-align: center;
 
     color: var(--white-color);
@@ -188,9 +193,12 @@ body {
     color: var(--secondary-text-color);
 }
 
-.address {}
+.address {
+    font-style: normal;
+}
 
 .address-list {}
+
 
 .address-link {
     line-height: 1.3571;
