--- a/css/styles.css
+++ b/css/styles.css
@@ -1,229 +1,387 @@
-/* general styles */
+/*----------------------------------------------------- general styles */
 
 :root {
-    --primary-color: #616161;
-    --secondary-text-color: #000000;
-    --white-color: #ffffff;
-    --secondary-bg-color: #F9F7F7;
-    --title-color: #222222;
-    --accent-color: #D1A954;
-    --border-color: rgba(209, 169, 84, 0.9);
+  --primary-color: #616161;
+  --secondary-text-color: #000000;
+  --white-color: #ffffff;
+  --secondary-bg-color: #f9f7f7;
+  --title-color: #222222;
+  --accent-color: #d1a954;
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
-    background-color: var(--white-color);
-    color: var(--primary-color);
+  font-family: 'Montserrat', sans-serif;
+  background-color: var(--white-color);
+  color: var(--primary-color);
 
-    font-size: 14px;
-    font-weight: 300;
+  font-size: 14px;
+  font-weight: 300;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+p {
+  margin: 0;
+  padding: 0;
 }
 
 .hidden {
-    border: 0;
-    clip: rect(1px, 1px, 1px, 1px);
-    -webkit-clip-path: inset(50%);
-    clip-path: inset(50%);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-    word-wrap: normal !important;
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  -webkit-clip-path: inset(50%);
+  clip-path: inset(50%);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  word-wrap: normal !important;
 }
 
 .list {
-    list-style: none;
+  list-style: none;
 }
 
 .link {
-    font-size: 13px;
-    line-height: 1.2308;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    text-decoration: none;
+  font-size: 13px;
+  line-height: 1.2308;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  text-decoration: none;
 
-    color: #000000;
+  color: #000000;
 }
 
 .current {
-    font-weight: 400;
-    text-align: center;
-    letter-spacing: 0.05em;
+  font-weight: 400;
+  text-align: center;
+  letter-spacing: 0.05em;
 
-    color: #D1A954;
+  color: #d1a954;
 
-    border: 1px solid var(--border-color)
+  border: 1px solid var(--border-color);
 }
 
 .link:hover,
 .link:focus {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
-.section {}
+.section {
+}
 
 .title {
-    font-size: 36px;
-    font-weight: 300;
-    line-height: 1.4444;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
+  font-size: 36px;
+  font-weight: 300;
+  line-height: 1.4444;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
 }
 
 .subtitle {
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 1.375;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.375;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
 
-    color: var(--secondary-text-color);
+  color: var(--secondary-text-color);
 }
 
 .logo-descr {
-    font-size: 9px;
-    line-height: 1.2222;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
+  font-size: 9px;
+  line-height: 1.2222;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 
-    color: var(--secondary-text-color);
+  color: var(--secondary-text-color);
 }
 
 .site-title {
-    font-size: 36px;
-    font-weight: 300;
-    line-height: 1.4444;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
+  font-size: 36px;
+  font-weight: 300;
+  line-height: 1.4444;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
 
-    color: var(--title-color);
+  color: var(--title-color);
+}
+/* ---------------------------------------------------- containers */
+
+.top-container {
+  width: 1410px;
+  margin: 0 auto;
 }
 
-/* header */
-
-.header {}
-
-.site-nav {}
-
-.nav-list {}
-
-/* menu section */
-
-.menu {}
-
-
-.menu-list {}
-
-.menu-list-item {
-    background-color: var(--accent-color)
+.container {
+  width: 1110px;
+  margin: 0 auto;
 }
 
-.menu-title {
-    font-size: 30px;
-    font-weight: 400;
-    line-height: 1.2333;
-    text-align: center;
-    text-transform: uppercase;
+/*----------------------------------------------------- header */
 
-    color: var(--white-color);
+.header {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
-.menu-subtitle {
-    line-height: 1.3571;
-    font-weight: 400;
-    text-align: center;
-
-    color: var(--white-color);
+.header-wrap {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-/* about section */
+.site-nav {
+}
 
-.about {}
+.nav-list {
+  display: flex;
+}
 
+.nav-list .item:not(:last-child) {
+  margin-right: 30px;
+}
+
+/*----------------------------------------------------- menu section */
+
+.menu {
+  padding-bottom: 182px;
+}
+
+.menu-list {
+  display: flex;
+  gap: 30px;
+}
+
+.menu-list .list-item {
+  width: 450px;
+  height: 504px;
+  display: flex;
+  align-items: end;
+}
+
+.menu-list .list-item:nth-child(1) {
+  background-image: url(../images/menu-1-min.jpg);
+}
+
+.menu-list .list-item:nth-child(2) {
+  background-image: url(../images/menu-2-min.jpg);
+}
+
+.menu-list .list-item:nth-child(3) {
+  background-image: url(../images/menu-3-min.jpg);
+}
+
+.list-item .item {
+  background: rgba(209, 169, 84, 0.9);
+  padding: 20px 15px;
+}
+
+.item .item-wrap {
+  padding: 22px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.menu .title {
+  margin-bottom: 20px;
+
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 1.2333;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: var(--white-color);
+}
+
+.menu .subtitle {
+  line-height: 1.3571;
+  font-weight: 400;
+  text-align: center;
+
+  color: var(--white-color);
+}
+
+/*----------------------------------------------------- about section */
+
+.about {
+  padding-bottom: 90px;
+  text-align: center;
+  background: rgb(255, 255, 255);
+  background: -moz-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(196, 196, 196, 1) 100%);
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(196, 196, 196, 1) 100%);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(196, 196, 196, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#c4c4c4',GradientType=0 );
+}
+
+.about .site-title {
+  margin-bottom: 25px;
+}
+
+.about .img {
+  margin-bottom: 10px;
+}
+
+.about .logo-descr {
+  margin-bottom: 60px;
+}
+
+.about .video {
+  margin-bottom: 90px;
+}
 
 .text-descr {
-    line-height: 1.3571;
+  line-height: 1.3571;
 }
 
-.about-list {}
+.about-bottom {
+  display: flex;
+  text-align: left;
+}
 
-/* gallery section */
+.about-logo {
+  width: 50%;
+  padding: 0 65px;
+}
 
-.gallery {}
+.about-logo .img {
+  margin-bottom: 33px;
+}
+
+.about .text-descr:first-child {
+  margin-bottom: 10px;
+}
+
+.about-list {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 39px;
+  column-gap: 30px;
+  width: 50%;
+}
+
+.about-list .item {
+  width: 255px;
+}
+
+.about-list .subtitle {
+  margin-bottom: 20px;
+  padding-left: 65px;
+}
+
+/*----------------------------------------------------- gallery section */
+
+.gallery {
+  padding-top: 127px;
+  padding-bottom: 150px;
+}
+
+.gallery .gallery-top {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.gallery-top .gallery-head {
+  text-align: center;
+  padding: 94px 65px;
+}
+
+.gallery-head .img {
+  margin-bottom: 10px;
+}
 
 .gallery-title {
-    font-size: 24px;
-    line-height: 1.3333;
-    text-align: center;
-    text-transform: uppercase;
+  margin-bottom: 25px;
 
-    color: var(--secondary-text-color);
+  font-size: 24px;
+  line-height: 1.3333;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: var(--secondary-text-color);
 }
 
-.title {}
+.gallery .gallery-bottom {
+  display: flex;
+  gap: 30px;
+}
 
-/* learn-more section */
+.gallery-bottom .small {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+/*----------------------------------------------------- learn-more section */
 
 .learn-more {
-    background: url('../images/more-min.jpg') no-repeat;
+  background: url('../images/more-min.jpg') no-repeat;
 }
 
 .learn-more-title {
-    color: var(--white-color);
+  color: var(--white-color);
 }
 
 .learn-more-link {
-    font-size: 16px;
-    line-height: 1.25;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
 
-    color: var(--secondary-text-color);
-    background-color: var(--white-color);
+  color: var(--secondary-text-color);
+  background-color: var(--white-color);
 }
 
-/* form section */
+/*----------------------------------------------------- form section */
 
-.form-section {}
+.form-section {
+}
 
 .form-title {
-    color: var(--secondary-text-color);
+  color: var(--secondary-text-color);
 }
 
 .address {
-    font-style: normal;
+  font-style: normal;
 }
 
-.address-list {}
-
+.address-list {
+}
 
 .address-link {
-    line-height: 1.3571;
-    text-decoration: none;
+  line-height: 1.3571;
+  text-decoration: none;
 
-    color: var(--secondary-text-color);
+  color: var(--secondary-text-color);
 }
 
 .map-link {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .office-link {
-    letter-spacing: -0.01em;
-    text-decoration: underline;
+  letter-spacing: -0.01em;
+  text-decoration: underline;
 }
 
-/* footer */
+/*----------------------------------------------------- footer */
 
-.footer {}
+.footer {
+}
 
-.footer-img {}
+.footer-img {
+}
 
 .footer-text {
-    line-height: 1.3571;
+  line-height: 1.3571;
 
-    color: var(--secondary-text-color);
+  color: var(--secondary-text-color);
 }
