--- a/css/styles.css
+++ b/css/styles.css
@@ -213,11 +213,7 @@ p {
 .about {
   padding-bottom: 90px;
   text-align: center;
-  background: rgb(255, 255, 255);
-  background: -moz-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(196, 196, 196, 1) 100%);
-  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(196, 196, 196, 1) 100%);
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(196, 196, 196, 1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#c4c4c4', GradientType=0);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 35%, rgba(196, 196, 196, 1) 35%, rgba(196, 196, 196, 1) 100%);
 }
 
 .about .site-title {
@@ -272,7 +268,42 @@ p {
 
 .about-list .subtitle {
   margin-bottom: 20px;
-  padding-left: 65px;
+}
+
+.about-list .small-logo::before {
+  content: '';
+  display: inline-block;
+  width: 46px;
+  height: 30px;
+  background: url(../images/logo-small.svg) center bottom no-repeat;
+  margin-right: 20px;
+}
+
+.about-list .interior::before {
+  content: '';
+  display: inline-block;
+  width: 46px;
+  height: 30px;
+  background: url(../images/interior.svg)center bottom no-repeat;
+  margin-right: 20px;
+}
+
+.about-list .technologies::before {
+  content: '';
+  display: inline-block;
+  width: 46px;
+  height: 37px;
+  background: url(../images/technologies.svg)center bottom no-repeat;
+  margin-right: 20px;
+}
+
+.about-list .equipment::before {
+  content: '';
+  display: inline-block;
+  width: 46px;
+  height: 37px;
+  background: url(../images/equipment.svg)center bottom no-repeat;
+  margin-right: 20px;
 }
 
 /*----------------------------------------------------- gallery section */
@@ -387,7 +418,6 @@ p {
 
 .address .item {
   margin-bottom: 30px;
-  padding-left: 45px;
 }
 
 .address .item:last-child {
