--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,7 @@ p {
   text-decoration: none;
 
   color: #000000;
+  background-color: transparent;
 }
 
 .current {
@@ -185,14 +186,20 @@ p {
   background-image: url(../images/menu-3-min.jpg);
 }
 
+.list-item {
+  position: relative;
+  overflow: hidden;
+}
+
 .list-item .item {
   transform: translateY(0%);
   transition: transform 250ms linear, opacity 250ms linear;
   opacity: 1;
-  overflow: hidden;
+  pointer-events: none;
 
-  background: rgba(209, 169, 84, 0.9);
   padding: 20px 15px;
+
+  background: rgba(209, 169, 84, 0.8);
 }
 
 .item .item-wrap {
@@ -223,6 +230,33 @@ p {
   text-align: center;
 
   color: var(--white-color);
+}
+
+.over-text {
+  font-size: 16px;
+  line-height: 1.36;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: var(--white-color);
+}
+
+.overlay {
+  transition: transform 250ms linear, opacity 250ms linear;
+  transform: translateY(-100%);
+  opacity: 0;
+
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 15px;
+
+  background: rgba(209, 169, 84, 0.8);
+}
+
+.list-item:hover .overlay {
+  transform: translateY(0%);
+  opacity: 10;
 }
 
 /*----------------------------------------------------- about section */
@@ -559,7 +593,37 @@ p {
 }
 
 .footer-text {
+  display: flex;
+  list-style: none;
+}
+
+.social-link {
+  transition: color 250ms linear, background-color 250ms linear;
+
+  padding: 7px 10px;
+
   line-height: 1.3571;
+  text-decoration: none;
 
   color: var(--secondary-text-color);
+  background-color: transparent;
+}
+
+.footer-text .item {
+  display: flex;
+  align-items: center;
+}
+
+.footer-text .item:not(:last-child)::after {
+  content: '';
+  width: 10px;
+  height: 1px;
+  display: block;
+  background-color: var(--secondary-text-color);
+}
+
+.social-link:hover,
+.social-link:focus {
+  color: var(--white-color);
+  background-color: var(--accent-color);
 }
