--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,8 @@ p {
   background-color: var(--accent-color);
 }
 
-.section {}
+.section {
+}
 
 .title {
   font-size: 36px;
@@ -144,7 +145,8 @@ p {
   align-items: center;
 }
 
-.site-nav {}
+.site-nav {
+}
 
 .nav-list {
   display: flex;
@@ -245,8 +247,6 @@ p {
 }
 
 .over-text {
-
-
   font-size: 16px;
   line-height: 1.36;
   text-align: center;
@@ -265,10 +265,12 @@ p {
 .about {
   padding-bottom: 90px;
   text-align: center;
-  background: linear-gradient(to bottom,
-      rgba(255, 255, 255, 1) 35%,
-      rgba(196, 196, 196, 1) 35%,
-      rgba(196, 196, 196, 1) 100%);
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 1) 35%,
+    rgba(196, 196, 196, 1) 35%,
+    rgba(196, 196, 196, 1) 100%
+  );
 }
 
 .about .site-title {
@@ -506,7 +508,7 @@ p {
   gap: 30px;
 }
 
-.address-list>.item {
+.address-list > .item {
   width: 50%;
 }
 
@@ -644,7 +646,7 @@ p {
   height: 100%;
   background-color: rgba(0, 112, 186, 0.8);
 
-  transition: opacity 250ms linear;
+  transition: opacity 250ms linear, visibility 250ms linear;
 }
 
 .modal {
