--- a/css/styles.css
+++ b/css/styles.css
@@ -62,17 +62,6 @@ p {
   background-color: transparent;
 }
 
-.current {
-  border: 1px solid var(--accent-color);
-  padding: 7px 10px 7px 10px;
-
-  font-weight: 400;
-  text-align: center;
-  letter-spacing: 0.05em;
-
-  color: #d1a954;
-}
-
 .link:hover,
 .link:focus {
   color: var(--white-color);
@@ -138,20 +127,52 @@ p {
   padding-bottom: 60px;
 }
 
-.header-wrap {
+.header__wrap {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-.site-nav {}
+.header__list {}
 
-.nav-list {
+.site-nav__list {
   display: flex;
+  list-style: none;
 }
 
-.nav-list .item:not(:last-child) {
+.site-nav__item:not(:last-child) {
   margin-right: 10px;
+}
+
+.site-nav__link {
+  transition: color 250ms linear, background-color 250ms linear;
+  padding: 7px 10px 7px 10px;
+
+  font-size: 13px;
+  line-height: 1.2308;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  text-decoration: none;
+
+  color: #000000;
+  background-color: transparent;
+}
+
+.site-nav__link:hover,
+.site-nav__link:focus {
+  color: var(--white-color);
+  background-color: var(--accent-color);
+}
+
+.site-nav__link--current {
+  border: 1px solid var(--accent-color);
+  padding: 7px 10px 7px 10px;
+
+  font-weight: 400;
+  text-align: center;
+  letter-spacing: 0.05em;
+
+  color: #d1a954;
 }
 
 /*----------------------------------------------------- menu section */
@@ -421,6 +442,7 @@ p {
 .learn-more .item {
   transition: color 250ms linear, background-color 250ms linear;
   display: inline-block;
+  cursor: pointer;
 
   font-size: 16px;
   line-height: 1.25;
@@ -588,6 +610,7 @@ p {
   max-width: 182px;
   padding: 12px 35px;
   border: none;
+  cursor: pointer;
 
   font-weight: 300;
   font-size: 16px;
@@ -689,6 +712,7 @@ p {
   position: absolute;
   top: 50%;
   left: 50%;
+  padding: 50px 10px 10px 10px;
 
   width: 500px;
   min-height: 500px;
@@ -730,4 +754,60 @@ p {
 
   color: var(--white-color);
   background-color: var(--accent-color);
+}
+
+.modal-form {}
+
+.radio-btn {
+  transition: background-color 250ms linear;
+
+  border: 2px solid var(--accent-color);
+  border-radius: 4px;
+  padding: 20px 10px;
+}
+
+.radio-btn:focus-within {
+  background-color: var(--accent-color);
+}
+
+.radio-title {
+  margin-bottom: 20px;
+
+  font-weight: 300;
+  font-size: 30px;
+  line-height: 1.44;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  text-align: center;
+
+  color: var(--title-color);
+}
+
+.fields-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.input-wrap {}
+
+.radio-input {}
+
+.radio-input:checked+.radio-label {
+  border: 1px solid var(--secondary-text-color);
+}
+
+.radio-label {
+  transition: border 250ms linear;
+  cursor: pointer;
+
+  padding: 5px;
+
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 1.375;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+
+  color: var(--secondary-text-color);
 }
